Code tag now wraps. Fixes #122

--- a/github-dark.css
+++ b/github-dark.css
@@ -121,6 +121,9 @@
   code {
     overflow: visible !important;
   }
+  .markdown-body code {
+    white-space: pre-wrap;
+  }
   /* === logo === */
   .header .site, #adv_code_search .search-page-input {
     background: #111 !important;
